fix: Make details overflow visible

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,7 @@
     min-height: 150px;
     overflow: visible;
 }
+
+details {
+    overflow: visible;
+}
